fix: text-align center for firefox

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -118,6 +118,7 @@ strong {
 .align-center {
   text-align: center;
   text-align: -webkit-center;
+  text-align: -moz-center;
 }
 
 .hidden {
